--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,13 +1,13 @@
 <h1 class="text-center mt-5">Please Sign In</h1>
-<form class="form mt-3">
+<form [formGroup]="form" class="form mt-3" (submit)="submit()">
     <div class="form-group">
       <label for="email">Email address:</label>
-      <input type="email" class="form-control" placeholder="Enter email" id="email">
+      <input type="email" formControlName="email" class="form-control" placeholder="Enter email" id="email">
     </div>
     <div class="form-group">
       <label for="pwd">Password:</label>
-      <input type="password" class="form-control" placeholder="Enter password" id="pwd">
+      <input type="password" formControlName="password" class="form-control" placeholder="Enter password" id="pwd">
     </div>
 
-    <button type="submit" class="btn btn-block btn-primary">Login</button>
+    <button type="submit" class="btn btn-block btn-primary" routerLink='/login'>Login</button>
   </form>
