--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,23 @@
-<router-outlet></router-outlet>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+    <!-- Navbar text-->
+    <!-- <span class="navbar-text"> Navbar text </span> -->
+  
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/">Home</a>
+            </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login" *ngIf="!loggedIn">Login</a>
+        <a class="nav-link" routerLink="/" *ngIf="loggedIn" (click)="logout()">Logout</a>
+      </li>
+    </ul>
+  
+  </nav>
+  <div class="container">
+      <router-outlet></router-outlet>
+  </div>
+  
