--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -1,1 +1,3 @@
-<p>secure works!</p>
+<div class="container headerOfUser mt-5">
+    <h1 *ngIf="user">Hi {{user.first_name}} {{user.last_name}}</h1>
+</div>
